--- a/index.html
+++ b/index.html
@@ -146,13 +146,14 @@
     </section>
             <hr class="small">
     <!-- Callout -->
-    <aside class="callout">
+    <aside id="portfolio">
     <div class="container">
         <div class="row">
           <div class="col-lg-10 mx-auto text-center">
-             <h2>Who are we?</h2>
+             <h2>Who we are </h2>
             <hr class="small">
-           <div class="row">
+           
+            <div class="row">
              <div class="col-md-2">
                 <div class="portfolio-item">
                   <a href="#">
@@ -167,26 +168,50 @@
              <div class="col-md-2">
                 <div class="portfolio-item">
                   <a href="#">
-                    <img class="img-portfolio img-fluid" src="img/mostafa.jpeg" style="width:190px;height:150px;">
+                    <img class="img-portfolio img-fluid" src="img/ah.jpg" style="width:190px;height:150px;">
                   </a>
                 </div>
               </div>
               <div class="col-md-4">
-                <h2>Mostafa Albana</h2>
-                <h5>Full Stack Web Developer</h5> 
+                <h2>Ahmed Hassan</h2>
+                <h5>Senior Java Developer</h5> 
               </div>
            </div>
            <div class="row">
              <div class="col-md-2">
                 <div class="portfolio-item">
                   <a href="#">
-                    <img class="img-portfolio img-fluid" src="img/ahmed.jpeg" style="width:200px;height:150px;">
+                    <img class="img-portfolio img-fluid" src="img/ae.png" style="width:150px;height:150px;">
                   </a>
                 </div>
               </div>
               <div class="col-md-4">
-                <h2>Ahmed shehab</h2>
-                <h5>Java Web Developer</h5> 
+                <h2>Ahmed ELdeeb</h2>
+                <h5>Java Developer</h5>
+              </div>
+             <div class="col-md-2">
+                <div class="portfolio-item">
+                  <a href="#">
+                    <img class="img-portfolio img-fluid" src="img/mg.jpg" style="width:190px;height:150px;">
+                  </a>
+                </div>
+              </div>
+              <div class="col-md-4">
+                <h2>Muhamed Gomaa</h2>
+                <h5>Java Developer</h5> 
+              </div>
+           </div>
+           <div class="row">
+             <div class="col-md-2">
+                <div class="portfolio-item">
+                  <a href="#">
+                    <img class="img-portfolio img-fluid" src="img/mi.png" style="width:200px;height:150px;">
+                  </a>
+                </div>
+              </div>
+              <div class="col-md-4">
+                <h2>Mikhail Fayez</h2>
+                <h5>Java Developer</h5> 
               </div>
            </div>
           </div>
@@ -245,9 +270,10 @@
     -->
     <!-- Map -->
 
-            <hr class="small">
-
+    <hr class="small">
+    <section id="contact">
     <div id="map"></div>
+    </section>
     <script>
       function initMap() {
         var tanta = {lat: 30.79401364, lng: 30.99627256};
