--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
               </div>
               <div class="col-md-4">
                 <h2>Ali Ali Abdelfatah</h2>
-                <h5>Senior Java Developer and consultant</h5>
+                <h5>CEO</h5>
               </div>
              <div class="col-md-2">
                 <div class="portfolio-item">
@@ -174,7 +174,7 @@
               </div>
               <div class="col-md-4">
                 <h2>Ahmed Hassan</h2>
-                <h5>Senior Java Developer</h5> 
+                <h5>Fullstack Developer</h5> 
               </div>
            </div>
            <div class="row">
@@ -187,7 +187,7 @@
               </div>
               <div class="col-md-4">
                 <h2>Ahmed ELdeeb</h2>
-                <h5>Java Developer</h5>
+                <h5>Fullstack Developer</h5>
               </div>
              <div class="col-md-2">
                 <div class="portfolio-item">
@@ -198,7 +198,7 @@
               </div>
               <div class="col-md-4">
                 <h2>Muhamed Gomaa</h2>
-                <h5>Java Developer</h5> 
+                <h5>Fullstack Developer</h5> 
               </div>
            </div>
            <div class="row">
@@ -211,7 +211,7 @@
               </div>
               <div class="col-md-4">
                 <h2>Mikhail Fayez</h2>
-                <h5>Java Developer</h5> 
+                <h5>Fullstack Developer</h5> 
               </div>
            </div>
           </div>
