--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <!-- Header -->
     <header class="header" id="top">
       <div class="text-vertical-center">
-        <h1>Innovative Solutions</h1>
+        <h1>Smart Inn</h1>
         <h3>Software development company with one clear objective, deliver the best customer service.</h3>
         <br>
         <a href="#about" class="btn btn-dark btn-lg js-scroll-trigger">Find Out More</a>
