--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Innovative solutions</title>
+    <title>SmartInn</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -40,7 +40,7 @@
           <i class="fa fa-times"></i>
         </a>
         <li class="sidebar-brand">
-          <a class="js-scroll-trigger" href="#top">Innovative Solutions</a>
+          <a class="js-scroll-trigger" href="#top">SmartInn</a>
         </li>
         <li>
           <a class="js-scroll-trigger" href="#top">Home</a>
@@ -63,7 +63,7 @@
     <!-- Header -->
     <header class="header" id="top">
       <div class="text-vertical-center">
-        <h1>Smart Inn</h1>
+        <h1>SmartInn</h1>
         <h3>Software development company with one clear objective, deliver the best customer service.</h3>
         <br>
         <a href="#about" class="btn btn-dark btn-lg js-scroll-trigger">Find Out More</a>
@@ -74,7 +74,7 @@
     <section id="about" class="about">
       <div class="container text-center">
         
-        <p class="lead">innovative solutions is a software development company based in Tanta Egypt, that provides high quality IT services such as IT consulting, Web development and Business Applications at effective cost around the world. innovative solutions  offers you dedicated services at all stages of the project. We strongly believe in increasing our clients business output through the application of the latest technical tools in most effective and creative ways.
+        <p class="lead">SmartInn is a software development company based in Tanta Egypt, that provides high quality IT services such as IT consulting, Web development and Business Applications at effective cost around the world. SmartInn offers you dedicated services at all stages of the project. We strongly believe in increasing our clients business output through the application of the latest technical tools in most effective and creative ways.
       </div>
       <!-- /.container -->
     </section>
