--- a/index.html
+++ b/index.html
@@ -42,16 +42,25 @@
         var current = document.getElementsByClassName("current");
         current[0].className += "js-scroll-trigger"
         document.getElementById("team1").className += " current";
-      }else if (document.body.scrollTop > 3380 && document.body.scrollTop < 4100) {
+      } else if (document.body.scrollTop > 3380 && document.body.scrollTop < 4100) {
         var current = document.getElementsByClassName("current");
         current[0].className += "js-scroll-trigger"
         document.getElementById("portfolio1").className += " current";
-      }else if (document.body.scrollTop > 4100){
+      } else if (document.body.scrollTop > 4100) {
         var current = document.getElementsByClassName("current");
         current[0].className += "js-scroll-trigger"
         document.getElementById("contact1").className += " current";
       }
 
+    }
+
+    function toggleActive(){
+      var div = document.getElementById("sidebar-wrapper");
+      if(div.className == ''){
+        div.className = "active"
+      }else{
+        div.className = ""
+      }
     }
 
   </script>
@@ -69,7 +78,7 @@
   <header class="header" id="top">
     <div class="header-cover">
 
-      <div id="topnav" class="navbar navbar-fixed-top default">
+      <div id="topnav" class="navbar navbar-fixed-top default menu-dispaly">
         <div class="navbar-inner" style="background: rgba(0,0,0,0.0);border-bottom: black;">
           <div style="width: 100%;max-width: 85%;background: rgba(0,0,0,0.0)" class="container  nav-style">
             <div class="logo">
@@ -88,14 +97,11 @@
                   </li>
                   <li><a class="js-scroll-trigger" id="about1" href="#about">About</a>
                   </li>
-                  <li><a class="js-scroll-trigger" id="services1" 
-                      href="#services">Services</a></li>
+                  <li><a class="js-scroll-trigger" id="services1" href="#services">Services</a></li>
                   <li><a class="js-scroll-trigger" id="team1" href="#team">Our Team</a>
                   </li>
-                  <li><a class="js-scroll-trigger" id="portfolio1"
-                      href="#portfolio">Portfolio</a></li>
-                  <li><a class="js-scroll-trigger" id="contact1"
-                      href="#contact">Contact</a></li>
+                  <li><a class="js-scroll-trigger" id="portfolio1" href="#portfolio">Portfolio</a></li>
+                  <li><a class="js-scroll-trigger" id="contact1" href="#contact">Contact</a></li>
                   <a id="menu-toggle" style="background-color: inherit;" href="#" class="btn btn-dark btn-lg toggle">
                     <i class="fa fa-bars"></i>
                   </a>
@@ -108,9 +114,9 @@
       </div>
 
       <!-- Navigation -->
-      <!-- <a id="menu-toggle" href="#" class="btn btn-dark btn-lg toggle">
-    <i class="fa fa-bars"></i>
-  </a> -->
+      <a id="menu-togg" onclick="toggleActive()" style="position: fixed;z-index: 1;top: 0;right: 0;background-color: rgba(0, 0, 0, .7);color: white;" class="btn btn-dark btn-lg toggle menu-toggle">
+        <i class="fa fa-bars"></i>
+      </a>
       <nav id="sidebar-wrapper">
         <ul class="sidebar-nav">
           <a id="menu-close" href="#" class="btn btn-light btn-lg pull-right toggle">
@@ -135,8 +141,7 @@
             <a class="js-scroll-trigger" href="#portfolio">Portfolio</a>
           </li>
           <li>
-            <a class="js-scroll-trigger" href="#contact" onclick=$( "#menu-close"
-              ).click();>Contact</a>
+            <a class="js-scroll-trigger" href="#contact" onclick=$( "#menu-close" ).click();>Contact</a>
           </li>
         </ul>
       </nav>
@@ -240,13 +245,13 @@
     <div class="row team" style="padding-right: 0px;margin-right: 0px;margin-left: 0px">
       <div class="team-cover" style="margin-right: 0px;margin-left: 0px"">
         <div class=" row" style="margin-right: 0px;margin-left: 0px">
-        <div style="margin-left: 20%;margin-top: 70px;margin-bottom: 70px;" class="col-md-4">
+        <div class="col-md-4 team_header">
           <h1 style="color: rgba(251, 176, 59, 1);font-size: 4.5rem;">Management Team</h1>
           <h3 style="color: white">Nothing beats coming into work every day to be surrounded with people who enjoy
             creating and making technology better.</h3>
         </div>
-        <div class="col-md-3">
-          <img src="img/team_managment_title.png" style="width: 70%;height: 70%;margin-top: 24%;margin-left: 50%;">
+        <div class="col-md-3 team-managment-title-icon">
+          <img src="img/team_managment_title.png" class="team_managment_title">
         </div>
       </div>
     </div>
@@ -257,10 +262,10 @@
         <div class="col-lg-10 mx-auto text-center">
 
           <div class="row" style="margin-top: 70px">
-            <div class="col-md-1">
+            <div class="col-md-1 quote-display">
 
             </div>
-            <div class="col-md-4">
+            <div class="col-md-4 quote-display">
               <div class="b-quote">
                 <p class="e-quotes"><i>“</i>A team of knowledgeable engineers is powerful. After all, technology is only
                   a
@@ -284,12 +289,12 @@
           </div>
           <hr>
           <div class="row" style="padding-top: 15px;">
-            <div class="col-md-1"></div>
-            <div class="col-md-2" style="text-align: right;padding: 0px">
-              <h2 style="padding-top: 30%">Ahmed Hassan</h2>
-              <h5 style="padding-right: 20px;">Fullstack Developer</h5>
+            <div class="col-md-1 quote-display"></div>
+            <div class="col-md-2 team_text_rigth">
+              <h2 class="team_text_rigth_name">Ahmed Hassan</h2>
+              <h5 class="team_text_rigth_job">Fullstack Developer</h5>
             </div>
-            <div class="col-md-3" style="text-align: left">
+            <div class="col-md-3 image-align">
               <div class="portfolio-item">
                 <a href="#">
                   <img class="e-photo" src="img/ah.jpg">
@@ -297,12 +302,12 @@
               </div>
             </div>
 
-            <div class="col-md-2" style="text-align: right;padding: 0px">
-              <h2 style="padding-top: 30%">Ahmed ELdeeb</h2>
-              <h5 style="padding-right: 20px;">Fullstack Developer</h5>
+            <div class="col-md-2 team_text_rigth">
+              <h2 class="team_text_rigth_name">Ahmed ELdeeb</h2>
+              <h5 class="team_text_rigth_job">Fullstack Developer</h5>
             </div>
 
-            <div class="col-md-3" style="text-align: left">
+            <div class="col-md-3 image-align">
               <div class="portfolio-item">
                 <a href="#">
                   <img class="e-photo" src="img/ae.png">
@@ -342,11 +347,11 @@
           </div>
           <hr>
           <div class="row" style="padding-top: 15px;">
-            <div class="col-md-6" style="text-align: right;padding: 0px">
-              <h2 style="padding-top: 10%">Mostafa Elabbasy</h2>
-              <h5 style="padding-right: 35px;">Fullstack Developer</h5>
+            <div class="col-md-6 team_text_rigth">
+              <h2 class="team_last_row_name">Mostafa Elabbasy</h2>
+              <h5 class="team_last_row_job">Fullstack Developer</h5>
             </div>
-            <div class="col-md-6" style="text-align: left">
+            <div class="col-md-6 image-align">
               <div class="portfolio-item">
                 <a href="#">
                   <img class="e-photo" src="img/mos.jpg">
@@ -360,7 +365,7 @@
 
   </section>
 
-  <section id="portfolio" style="max-height: 696px;" class="portfolio  text-white">
+  <section id="portfolio" class="portfolio  text-white">
     <div style="max-height: 676px;" class="portifolio-cover">
       <div class="container">
         <div class="row">
