--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
       <div class="team-cover" style="margin-right: 0px;margin-left: 0px"">
         <div class=" row" style="margin-right: 0px;margin-left: 0px">
         <div class="col-md-4 team_header">
-          <h1 style="color: rgba(251, 176, 59, 1);font-size: 4.5rem;">Management Team</h1>
+          <h1 style="color: rgba(251, 176, 59, 1);" class="team-text-size">Management Team</h1>
           <h3 style="color: white">Nothing beats coming into work every day to be surrounded with people who enjoy
             creating and making technology better.</h3>
         </div>
