--- a/index.html
+++ b/index.html
@@ -99,9 +99,9 @@
 
       var body = document.getElementById('top');
       var backgrounds = new Array(
-        'url(../img/new-bg.jpg) no-repeat center center scroll',
-        'url(../img/new-bg-2.jpg) no-repeat center center scroll',
-        'url(../img/new-bg-3.jpg) no-repeat center center scroll'
+        'url(./img/new-bg.jpg) no-repeat center center scroll',
+        'url(./img/new-bg-2.jpg) no-repeat center center scroll',
+        'url(./img/new-bg-3.jpg) no-repeat center center scroll'
       );
       console.log("rrrrrrrrrrrrrrrrr")
       var current = 0;
@@ -155,7 +155,7 @@
 </head>
 
 <body>
-  <header class="header" id="top" style="background: url(../img/new-bg.jpg) no-repeat center center scroll;">
+  <header class="header" id="top" style="background: url(./img/new-bg.jpg) no-repeat center center scroll;">
     <div class="header-cover">
 
       <div id="topnav" class="navbar navbar-fixed-top default menu-dispaly">
