--- a/index.html
+++ b/index.html
@@ -692,7 +692,7 @@
               (02) 01098502270 </li>
             <li>
               <i class="fa fa-envelope-o fa-fw"></i>
-              <a href="mailto:name@example.com">name@example.com</a>
+              <a href="mailto:eng.aliali2011@gmail.com">eng.aliali2011@gmail.com</a>
             </li>
           </ul>
           <br>
@@ -714,7 +714,7 @@
             </li>
           </ul>
           <hr class="small">
-          <p class="text-muted">©2017 innovative solutions - We build custom software for any device and platform All
+          <p class="text-muted">©2019 innovative solutions - We build custom software for any device and platform All
             rights reserved</p>
         </div>
       </div>
