--- a/index.html
+++ b/index.html
@@ -714,7 +714,7 @@
             </li>
           </ul>
           <hr class="small">
-          <p class="text-muted">©2019 innovative solutions - We build custom software for any device and platform All
+          <p class="text-muted">©2019 SmartInn Technology - We build custom software for any device and platform All
             rights reserved</p>
         </div>
       </div>
