--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 
   <title>SmartInn</title>
 
+  <link rel="shortcut icon" type="image/png" href="./img/favicon.png" >
+
   <!-- Bootstrap Core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="vendor/bootstrap/css/bootstrap-grid.css" rel="stylesheet">
@@ -117,34 +119,6 @@
     }
 
   </script>
-
-  <!-- <Script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js">
-    $(function () {
-      console.log("ssssssssssssssssssssss");
-      
-      var body = $('top');
-      var backgrounds = new Array(
-      'url(../img/sky-writer-3.png) no-repeat center center scroll',
-      'url(../img/sky-writer1.png) no-repeat center center scroll',
-      'url(../img/new-bg.jpg) no-repeat center center scroll'
-    );
-    console.log("rrrrrrrrrrrrrrrrr")
-    var current = 0;
-    function nextBackground() {
-      body.css(
-        'background',
-        backgrounds[current = ++current % backgrounds.length]
-      );
-
-      setTimeout(nextBackground, 10000);
-    }
-    console.log("mmmmmmmmmmmmmmmmmmmmmmmm")
-    setTimeout(nextBackground, 10000);
-    body.css('background', backgrounds[0]);
-    });
-    console.log("ttttttttttttttttt")
-  </Script> -->
-
   <style>
     #map {
       height: 600px;
