--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
   <title>SmartInn</title>
 
   <link rel="shortcut icon" type="image/png" href="./img/favicon.png" >
+  
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-148413569-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'UA-148413569-1');
+   </script>
+
 
   <!-- Bootstrap Core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
