--- a/index.html
+++ b/index.html
@@ -19,6 +19,14 @@
     gtag('js', new Date());
     gtag('config', 'UA-148413569-1');
    </script>
+  
+  <!-- Start Alexa Certify Javascript -->
+<script type="text/javascript">
+_atrk_opts = { atrk_acct:"qRvyt1FYxz20cv", domain:"smartinn-tech.com",dynamic: true};
+(function() { var as = document.createElement('script'); as.type = 'text/javascript'; as.async = true; as.src = "https://certify-js.alexametrics.com/atrk.js"; var s = document.getElementsByTagName('script')[0];s.parentNode.insertBefore(as, s); })();
+</script>
+<noscript><img src="https://certify.alexametrics.com/atrk.gif?account=qRvyt1FYxz20cv" style="display:none" height="1" width="1" alt="" /></noscript>
+<!-- End Alexa Certify Javascript -->  
 
 
   <!-- Bootstrap Core CSS -->
