--- a/index.html
+++ b/index.html
@@ -690,13 +690,13 @@ _atrk_opts = { atrk_acct:"qRvyt1FYxz20cv", domain:"smartinn-tech.com",dynamic: t
           <br>
           <ul class="list-inline">
             <li class="list-inline-item">
-              <a href="#">
+              <a href="https://www.facebook.com/Smartinn-tech-109559867117797/?modal=admin_todo_tour">
                 <i class="fa fa-facebook fa-fw fa-3x"></i>
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="#">
-                <i class="fa fa-twitter fa-fw fa-3x"></i>
+              <a href="https://www.linkedin.com/company/smartinn-tech/?viewAsMember=true">
+                <i class="fa fa-linkedin fa-fw fa-3x"></i>
               </a>
             </li>
             <li class="list-inline-item">
