--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@ _atrk_opts = { atrk_acct:"qRvyt1FYxz20cv", domain:"smartinn-tech.com",dynamic: t
             <div class="col-md-2">
               <div class="portfolio-item">
                 <a href="#">
-                  <img class="e-photo" src="img/ceo.jpg">
+                  <img class="e-photo" src="img/ceo.jpeg">
                 </a>
               </div>
             </div>
