--- a/index.html
+++ b/index.html
@@ -684,7 +684,7 @@ _atrk_opts = { atrk_acct:"qRvyt1FYxz20cv", domain:"smartinn-tech.com",dynamic: t
               (02) 01098502270 </li>
             <li>
               <i class="fa fa-envelope-o fa-fw"></i>
-              <a href="mailto:eng.aliali2011@gmail.com">eng.aliali2011@gmail.com</a>
+              <a href="mailto:alialrabi@smartinn-tech.com">alialrabi@smartinn-tech.com</a>
             </li>
           </ul>
           <br>
@@ -706,7 +706,7 @@ _atrk_opts = { atrk_acct:"qRvyt1FYxz20cv", domain:"smartinn-tech.com",dynamic: t
             </li>
           </ul>
           <hr class="small">
-          <p class="text-muted">©2019 SmartInn Technology - We build custom software for any device and platform All
+          <p class="text-muted">©2020 SmartInn Technology - We build custom software for any device and platform All
             rights reserved</p>
         </div>
       </div>
