--- a/index.html
+++ b/index.html
@@ -684,7 +684,7 @@ _atrk_opts = { atrk_acct:"qRvyt1FYxz20cv", domain:"smartinn-tech.com",dynamic: t
               (02) 01098502270 </li>
             <li>
               <i class="fa fa-envelope-o fa-fw"></i>
-              <a href="mailto:alialrabi@smartinn-tech.com">alialrabi@smartinn-tech.com</a>
+              <a href="mailto:info@smartinn-tech.com">info@smartinn-tech.com</a>
             </li>
           </ul>
           <br>
